--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "qs": "4.0.0",
     "raw-loader": "0.5.1",
     "react": "0.13.3",
+    "react-cookie": "^0.4.8",
     "react-router": "0.13.6",
     "request": "2.61.0",
     "requirefrom": "0.2.0",
@@ -156,8 +157,8 @@
     "url-loader": "0.5.6",
     "webpack": "1.13.1",
     "webpack-directory-name-as-main": "1.0.0",
-      "whatwg-fetch": "0.9.0",
-    "wreck": "6.2.0",
+    "whatwg-fetch": "0.9.0",
+    "wreck": "^6.2.0",
     "xhr": "2.2.2"
   },
   "devDependencies": {
