--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "babel-core": "5.8.23",
     "babel-loader": "5.3.2",
     "babel-runtime": "5.8.20",
-    "bcrypt": "0.8.7",
+    "bcryptjs": "^2.3.0",
     "bluebird": "2.9.34",
     "boom": "2.8.0",
     "bootstrap": "3.3.5",
