原来没有提交build task， 无法编译，现在添加build任务。 此外由于和自己系统url路径重复，更改管理员的账户管理路径从原来 /admin   ==> /kibana-admin,

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/
-target/
+/build
+target
 optimize/bundles
 optimize/testdev
 optimize/testUiServer
@@ -54,5 +54,13 @@ config/kibana.dev.yml
 *.out
 *~
 test/output
-trash
+*.iml
 
+trash
+/esvm
+.htpasswd
+.eslintcache
+installedPlugins
+disabledPlugins
+webpackstats.json
+selenium
