--- a/package.json
+++ b/package.json
@@ -141,7 +141,6 @@
     "moment": "2.14.1",
     "moment-timezone": "0.4.1",
     "mongodb": "2.2.4",
-    "node-uuid": "1.4.7",
     "nodemailer": "1.11.0",
     "nodemailer-markdown": "1.0.0",
     "object-assign": "3.0.0",
@@ -162,6 +161,7 @@
     "tar": "2.2.0",
     "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "0.5.6",
+    "uuid": "^3.0.0",
     "webpack": "1.13.1",
     "webpack-directory-name-as-main": "1.0.0",
     "whatwg-fetch": "0.9.0",
